@@ -13,7 +13,8 @@
 	<flag name="bluray">Enable playback of Blu-ray filesystems</flag>
 	<flag name="bs2b">Enable Bauer stereophonic-to-binaural headphone filter</flag>
 	<flag name="cdio">Use libcdio for CD support (instead of cdparanoia)</flag>
-	<flag name="enca">Enables support for charset discovery and conversion</flag>
+	<flag name="enca">Enables support for charset discovery and conversion using <pkg>app-i18n/enca</pkg></flag>
+	<flag name="libguess">Enables support for charset discovery and conversion using <pkg>app-i18n/libguess</pkg></flag>
 	<flag name="mng">MNG input support</flag>
 	<flag name="mp3">Enable support for mp3 decoding over <pkg>media-sound/mpg123</pkg> instead of relying on ffmpeg support.</flag>
 	<flag name="network">Enables network streaming support</flag>
